--- a/_config.yml
+++ b/_config.yml
@@ -12,12 +12,12 @@ app:
   ios_id: 1433802408 # REQUIRED - 10 Digit Numeric App ID (lookup in iTunes Connect)
   android_id: # Optional - Enter Android app id like: com.example.app
 
-  icon: images/icon.png # Leave blank to auto-magically populate
+  icon: /images/icon.png # Leave blank to auto-magically populate
   # To update use path relative to project root with no leading slash:
   # e.g. images/app-icon-512.png
   # 512px or greater, square
 
-  favicon: images/icon.png # uncomment if uploading own favicon
+  favicon: /images/icon.png # uncomment if uploading own favicon
   # To update use path relative to project root with no leading slash:
   # e.g. images/app-favicon.png - can be .ico or .png
   # 16px or greater, square
@@ -42,7 +42,7 @@ app:
 #
 # Marketing
 #
-marketing_header: Image Cycler # Optional
+marketing_header: # Optional
 marketing_desc: Choose as many as 100 images to rotate in a slide show to entertain you and your friends - you can have it go slow to enjoy the show, or extra quick!  Never tracked, your data is always yours alone.
 #
 # Social Links
@@ -80,7 +80,7 @@ device: iphone-se-silver-vertical # REQUIRED
 # Theme Settings
 #
 background_color: "#989898" # Optional
-background_image: /images/backgrounds/58-usersthink-stock-image-web.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
+background_image: /images/bg.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
 text_color: white # Optional
 link_color: # Optional
 social_link_color: white # Optional
