--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ social-links:
   twitter:
   pinterest:
   instagram:
-  email:
+  email: laurettatagli@yahoo.com
   youtube: # channel/<your_long_string> or <user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
@@ -80,10 +80,10 @@ device: iphone-se-silver-vertical # REQUIRED
 # Theme Settings
 #
 background_color: "#989898" # Optional
-background_image: /images/bg.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
-text_color: white # Optional
+background_image: /images/backgrounds/bg.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
+text_color: black # Optional
 link_color: # Optional
-social_link_color: white # Optional
+social_link_color: black # Optional
 download_button_background_color: "#0191FF" # Optional
 download_button_text_color: white; # Optional
 
