--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ device: iphone-se-silver-vertical # REQUIRED
 # Theme Settings
 #
 background_color: "#989898" # Optional
-background_image: images/backgrounds/bg.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
+background_image: /images/backgrounds/37-usersthink-stock-image-web.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
 text_color: black # Optional
 link_color: # Optional
 social_link_color: black # Optional
