--- a/_config.yml
+++ b/_config.yml
@@ -81,10 +81,10 @@ device: iphone-se-silver-vertical # REQUIRED
 #
 background_color: "#989898" # Optional
 background_image: /images/backgrounds/bg.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
-text_color: black # Optional
+text_color: white # Optional
 link_color: # Optional
-social_link_color: black # Optional
-download_button_background_color: "#0191FF" # Optional
+social_link_color: white # Optional
+download_button_background_color: black # Optional
 download_button_text_color: white; # Optional
 
 #
